# lazyvim_fetch

./: Cargo.toml  README.md  lazyvim.toml
src/: main.rs
