[package]
name = "lazyvim_fetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
futures = "0.3.28"
log = "0.4.17"
serde = { version = "1.0.158", features = ["derive"] }
simple_logger = "4.1.0"
toml_edit = { version = "0.19.7", features = ["serde"] }
